# flashcards

./: README.md  docker-compose.yaml
ai/: .gitignore  Cargo.toml  Dockerfile  README.md
ai/rules/: card_only_rule.md  explanation_rule.md  generate_rule.md  text_analysis_rule.md
ai/src/: cli.rs  lib.rs  main.rs  server.rs
ai/src/core/: mcp_tools.rs  mod.rs  nlp.rs  ollama.rs
ai/src/utils/: mod.rs  rules.rs
ai/ssh/: config.toml
backend/: .gitignore  Dockerfile  README.md  pyrightconfig.json  requirements.txt  ruff.toml  test_ssh_connection.py
backend/backend/: settings.py  urls.py
backend/cards/: admin.py  ai_service.py  apps.py  models.py  serializer.py  serializers.py  srs.py  tests.py  urls.py  views.py
backend/cards/migrations/: 0001_initial.py  0002_alter_badge_condition_alter_learningsession_status_and_more.py  0002_user_is_public.py  0003_user_avatar.py  0004_card_average_review_time_card_correct_count_and_more.py
frontend/: README.md  astro.config.mjs  package.json  playwright.config.ts
frontend/src/components/: Footer.astro  LoginForm.tsx  Navbar.astro  NavbarList.tsx  Welcome.astro
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/cards/: CardEditor.tsx  MarkdownPreview.tsx
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts
frontend/src/pages/: 404.astro  dashboard.astro  index.astro  learn.astro  profile.astro  settings.astro  test.astro
frontend/src/pages/auth/: login.astro  (+1 more)
frontend/src/styles/: global.css
frontend/src/types/: errors.ts  types.ts
frontend/tests/: home.spec.ts
(+12 files in other folders)
