[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "0.15.0"
ndarray = "0.16.1"
reqwest = { version = "0.12.20", features = ["json"] }
rust-bert = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full"] }
