[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
ndarray = "0.16.1"
reqwest = { version = "0.12.20", features = ["json"] }
rust-bert = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ssh2 = "0.9.5"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.27.0"
toml = "0.8.23"
